# subnet

./: .gitignore  README.md  pyproject.toml
.obsidian/: workspace.json
backend/: main.py  requirements.txt
backend/api/: models.py
backend/api/routes/: dashboard.py  images.py  miners.py  tasks.py
backend/db/: store.py
backend/services/: detect_service.py  forge_service.py  miner_service.py  task_service.py
data/probes/: clean_000_tampered_mask.npy  clean_001_tampered.json  clean_001_tampered_mask.npy  clean_002_tampered.json  clean_002_tampered_mask.npy  clean_003_tampered.json  clean_003_tampered_mask.npy  clean_004_tampered.json  clean_004_tampered_mask.npy
demo/: run_demo.py  run_real_demo.py
docs/: HARM_Proposal.md  PLAN.md  flowchart_prompt_en.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useApi.ts
proposal/: HARM_Proposal.md  gpt_harm_flowcharts.html  gpt_harm_flowcharts_10pages_2.0.html  harm_flowchart_presentation.html  harm_flowcharts_0417.html  pitch_deck.html  流程图_prompt.md
scripts/: generate_demo_data.py  setup_models.py
src/: protocol.py
src/fakeguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/miner/: detector.py  model_registry.py
src/validator/: forge.py  generate_samples.py  scorer.py
tests/: conftest.py
tests/core/: test_detector.py  test_ela_backend.py  test_forge.py  test_model_registry.py  test_protocol.py  test_scorer.py
(+28 files in other folders)
