[project]
name = "harm"
version = "0.1.0"
description = "HARM (Hey Asshole, Return Money): Decentralized Image Forgery Detection Subnet"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
